packages/coln-compiler/test/golden/nominal.output
-- elaborated
global entry named A
type: Theory
value: sig
end
global entry named B
type: Theory
value: sig
end
global entry named a
type: A
value: []

-- messages

error[E0300]: expected type B, but got type A
10 | def b : B := a
10 |              ^
B and A are not equal 
